<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ColibriActivity!</string>
    <string name="app_name">Colibri</string>
	<string name="NewEvent">NewEvent</string>
	<string name="SetParameter">SetParameter</string>
	<string name="Refresh">Refresh</string>
	<string name="Event">Event</string>
	
	<!-- New Event  -->
	<string name="hint_NameOfEvent">Event Name</string>
	<string name="hint_DescriptionOfEvent">Description</string>
	<string name="button_StartTime">Start Time</string>
	<string name="button_EndTime">End Time</string>
	<string name="makePrivate">Make Private?</string>
	<string name="createEvent">Create Event</string>
	
	<string name="PointYourLocation">Choose location for event</string>
	<string name="ChooseAddress">Choose address</string>
	<string name="StartTime">Start time</string>
	<string name="EndTime">End time</string>
	<string name="Address">Address</string>
	
	<string name="Error">Error</string>
	<string name="OK">OK</string>
	<string name="Success">Success</string>
	<string name="SuccessfulEventCreat">Event was created successfully.</string>
	<string name="SuccessfulEventEdit">Event was edited successfully.</string>
	<string name="SuccessfulEventDelete">Event was deleted successfully.</string>
	
	<string name="EditEvent">Edit Event</string>
	<string name="DeleteEvent">Delete Event</string>
	
	<string name="pickFromCamera">Upload image from camera</string>
	<string name="pickFromGalery">Upload image from gallery</string>
	
</resources>