<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	    	android:id="@+id/buttons"
			android:layout_height="wrap_content"
 	    	android:layout_width="fill_parent"
 	    	android:orientation="horizontal"
 	    	android:layout_alignParentBottom="true"
           android:layout_centerHorizontal="true" 
           xmlns:android="http://schemas.android.com/apk/res/android">
	<Button 
	     android:id="@+id/newEventButton"
         android:text="@string/NewEvent"
	     android:layout_height="wrap_content"
	     android:layout_width="wrap_content" />
	<Button 
         android:text="@string/SetParameter"
	     android:layout_height="wrap_content"
	     android:layout_width="wrap_content" />
	<Button 
	     android:id="@+id/refreshEvents"
         android:text="@string/Refresh"
	     android:layout_height="wrap_content"
	     android:layout_width="wrap_content" />
</LinearLayout>