<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
       	<EditText
			android:id="@+id/nameNewEvent"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/hint_NameOfEvent" />
        
        <EditText 
            android:id="@+id/descriptionNewEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false" 
            android:lines="3"
            android:hint="@string/hint_DescriptionOfEvent" />
        <RelativeLayout
            android:layout_width="match_parent"
		    android:layout_height="100dp" >
	        <com.google.android.maps.MapView
	            android:layout_width="match_parent"
		    	android:layout_height="match_parent"
		  	    android:id="@+id/minimap"
		      	android:clickable="false"
		      	android:enabled="true"
		      	android:apiKey="0RqdaxABfP8iBtPzNgoyoiqKdvZr8edQWtuM0yw"/>
	        <Button
	            android:layout_width="match_parent"
		    	android:layout_height="match_parent"
	            android:layout_centerInParent="true"
	            android:background="@null"
	            android:onClick="onButtonSelectLocationClicked" />
        </RelativeLayout>
        <Button
            android:id="@+id/buttonStartTime"
            android:tag="startTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_StartTime" 
            android:onClick="onButtonTimeClicked"/>
        
        <Button
            android:id="@+id/buttonEndTime"
            android:tag="endTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:text="@string/button_EndTime"
            android:onClick="onButtonTimeClicked"/>
        
        <LinearLayout 
            android:layout_width="match_parent"
        	android:layout_height="wrap_content">
        	
            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Spinner>
            
            <CheckBox 
                android:id="@+id/makePrivate"
                android:layout_height="wrap_content"  
			    android:text="@string/makePrivate"   
			    android:layout_width="fill_parent"/>
            
        </LinearLayout>
        
        <Button 
            android:id="@+id/createEventButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createEvent"
            android:onClick="onButtonCreateEventClicked"/>
        
    </LinearLayout>
</ScrollView>

