<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView 
        android:id="@+id/viewEventImage"
        android:src="@drawable/noimagefound" 
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

    <TextView
        android:id="@+id/nameEvent"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Large Text"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/eventDescription"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
   	 <com.google.android.maps.MapView
            android:layout_width="match_parent"
	    	android:layout_height="100dp"
	  	    android:id="@+id/eventLocationMap"
	      	android:clickable="false"
	      	android:enabled="true"
	      	android:apiKey="0RqdaxABfP8iBtPzNgoyoiqKdvZr8edQWtuM0yw"/>
   	 
   	 <LinearLayout     
   	     android:layout_width="match_parent"
   		 android:layout_height="wrap_content"
   		 android:padding="5dp">
    
	    <TextView 
	   	     android:layout_width="wrap_content"
	         android:layout_height="match_parent"
	         android:textAppearance="?android:attr/textAppearanceMedium"
	         android:text="@string/StartTime" 
	         android:layout_weight="1"
	         android:layout_gravity="left"/>
	    
	   	<TextView 
	   	     android:id="@+id/startTimeDate"
	   	     android:layout_width="wrap_content"
	         android:layout_height="match_parent"
	         android:textAppearance="?android:attr/textAppearanceMedium"
	         android:layout_weight="1"
	         android:layout_gravity="right" />
   	 
   	 </LinearLayout>
   	 
   	 <LinearLayout     
   	     android:layout_width="match_parent"
   		 android:layout_height="wrap_content"
   		 android:padding="10dp">
    
	    <TextView 
	   	     android:layout_width="wrap_content"
	         android:layout_height="match_parent"
	         android:textAppearance="?android:attr/textAppearanceMedium"
	         android:text="@string/EndTime" 
	         android:layout_weight="1"
	         android:layout_gravity="left"/>
	    
	   	<TextView 
	   	     android:id="@+id/endTimeDate"
	   	     android:layout_width="wrap_content"
	         android:layout_height="match_parent"
	         android:textAppearance="?android:attr/textAppearanceMedium"
	         android:layout_weight="1"
	         android:layout_gravity="right" />
   	 
   	 </LinearLayout>

   	 <LinearLayout 
	   	 android:layout_width="match_parent"
   		 android:layout_height="wrap_content"
   		 android:padding="10dp">
	   	
	   	 <Button
	   	     android:id="@+id/editEventButton"
	   	     android:layout_width="wrap_content"
	   	     android:layout_height="wrap_content"
	   	     android:text="@string/EditEvent"
	   	     android:layout_gravity="center_horizontal" />
	   	 
 	 	 <Button
	   	     android:id="@+id/deleteEventButton"
	   	     android:layout_width="wrap_content"
	   	     android:layout_height="wrap_content"
	   	     android:text="@string/DeleteEvent"
	   	     android:layout_gravity="center_horizontal" />
	   	 
   	 </LinearLayout>

</LinearLayout>